--- a/weather.html
+++ b/weather.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="./output.css" rel="stylesheet">
   <script src="./weather.js"></script>
-  <link rel="icon" href="./favicon.ico">
+  <link rel="icon" href="favicon.ico">
   <title>Weather Forcast website</title>
 </head>
-<body class="bg-blue-300 font-serif">
+<body class="bg-blue-300 font-sans">
   <header class="bg-blue-400 text-black p-4 text-center">
     <h1 class="text-3xl font-bold">Weather Forecast</h1>
     <p class="mt-2">Get the latest weather updates for your location.</p>
@@ -28,13 +28,13 @@
         onclick="input()"
         required
       >
-    <div id="historyMenu" class="absolute opacity-90 left-10 w-3xs bg-white rounded-2xl shadow mt-1 hidden z-10 p-4">
+    <div id="historyMenu" class="absolute opacity-90 left-10 w-3xs overflow-y-auto bg-white rounded-2xl shadow mt-1 hidden z-10 p-4">
     </div>
     <input  type="submit" value="Get Weather"class="mt-5 bg-blue-400 text-white p-2 w-full shadow hover:shadow-blue-950">
-    <button id="locationBtn" type="button" class="mt-5 bg-blue-400 text-white p-2 w-full shadow hover:shadow-blue-950">
-      Use Current Location
-      <!-- navigator.geolocation.getCurrentPosition(successCallback); -->
+     <button id="locationBtn" onclick="nav()" type="button" class="mt-5 bg-blue-400 text-white p-2 w-full shadow hover:shadow-blue-950">
+      Use Current Location</button>
   </form>
+ 
 </div>
 
   <div id="weatherInfo" class="p-4 w-4xl grid">
@@ -67,7 +67,7 @@
         <p class="temp" class="text-2xl font-bold" ></p>
         </div>
       </div>
-
+      <!-- day2 -->
         <div id="day2" class="bg-blue-100 p-4 rounded-lg shadow hover:bg-white transition duration-300">
         <!-- Weather details will be populated here -->
          <div class="flex flex-wrap item-center justify-between">
@@ -75,8 +75,8 @@
         <img class="w-20 h-20 mt-2" src="" alt="Weather Icon">
         <p class="temp" class="text-2xl font-bold" ></p>
         </div>
-
       </div>
+      <!-- day3 -->
         <div id="day3" class="bg-blue-100 p-4 rounded-lg shadow hover:bg-white transition duration-300">
         <!-- Weather details will be populated here -->
          <div class="flex flex-wrap item-center justify-between">
@@ -84,8 +84,8 @@
         <img class="w-20 h-20 mt-2" src="" alt="Weather Icon">
         <p class="temp" class="text-2xl font-bold" ></p>
         </div>
-
       </div>
+      <!-- day4 -->
         <div id="day4" class="bg-blue-100 p-4 rounded-lg shadow hover:bg-white transition duration-300">
         <!-- Weather details will be populated here -->
          <div class="flex flex-wrap item-center justify-between">
@@ -94,6 +94,7 @@
         <p class="temp" class="text-2xl font-bold" ></p>
         </div>
       </div>
+      <!-- day5 -->
       <div id="day5" class=" bg-blue-100 p-4 rounded-lg shadow hover:bg-white transition duration-300">
         <!-- Weather details will be populated here -->
          <div class="flex flex-wrap item-center justify-between">
