added height and overflow to historyMenu

--- a/weather.html
+++ b/weather.html
@@ -28,7 +28,7 @@
         onclick="input()"
         required
       >
-    <div id="historyMenu" class="absolute opacity-90 left-10 w-3xs overflow-y-auto bg-white rounded-2xl shadow mt-1 hidden z-10 p-4">
+    <div id="historyMenu" class="absolute opacity-90 left-10 w-3xs  h-40 overflow-y-auto bg-white rounded-2xl shadow mt-1 hidden z-10 p-4">
     </div>
     <input  type="submit" value="Get Weather"class="mt-5 bg-blue-400 text-white p-2 w-full shadow hover:shadow-blue-950">
      <button id="locationBtn" onclick="nav()" type="button" class="mt-5 bg-blue-400 text-white p-2 w-full shadow hover:shadow-blue-950">
